--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/pranatoli/nodejs/tree/task2#readme",
   "dependencies": {
+    "@sentry/node": "^7.72.0",
+    "@sentry/profiling-node": "^1.2.1",
+    "@sentry/tracing": "^7.72.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
